--- a/src/vnetif-stack/dune
+++ b/src/vnetif-stack/dune
@@ -4,7 +4,7 @@
  (modules vnetif_stack)
  (wrapped false)
  (libraries cstruct lwt lwt.unix mirage-clock ipaddr macaddr mirage-profile
-   duration result mirage-time mirage-net mirage-random ethernet arp arp.mirage
+   duration mirage-time mirage-net mirage-random ethernet arp arp.mirage
    logs tcpip.stack-direct tcpip.ipv4 tcpip.icmpv4 tcpip.tcp tcpip.udp
    mirage-vnetif
    ))
